tests/baselines/reference/propertyAccess5.errors.txt
tests/cases/compiler/propertyAccess5.ts(1,1): error TS18047: 'undefined' is possibly 'undefined'.


==== tests/cases/compiler/propertyAccess5.ts (1 errors) ====
    undefined.toBAZ();
    ~~~~~~~~~
!!! error TS18047: 'undefined' is possibly 'undefined'.